objects/HealthCloudGA__CarePlanProblem__c.object
<CustomObject>
    <description>Patients heath issue to be addressed by a care plan</description>
    <fields>
        <fullName>HealthCloudGA__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Problems</relationshipLabel>
        <relationshipName>Problems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlanTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Care Plan Template</label>
        <referenceTo>HealthCloudGA__CarePlanTemplate__c</referenceTo>
        <relationshipLabel>Problems</relationshipLabel>
        <relationshipName>Problems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CarePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Care plan this problem is a part of</description>
        <label>Care Plan</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Problems</relationshipLabel>
        <relationshipName>CarePlanProblems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cognition</fullName>
                </value>
                <value>
                    <fullName>Pain Monitoring or Management</fullName>
                </value>
                <value>
                    <fullName>Respiratory Impairment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                    <color>#FFFF66</color>
                    <default>true</default>
                    <label>Low</label>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <color>#FF6600</color>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>High</fullName>
                    <color>#FF0000</color>
                    <label>High</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Problem</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Problems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>HealthCloudGA__AccountProblem_Validation</fullName>
        <active>true</active>
        <description>Account lookup on Problem matches the Case.AccountID if not null</description>
        <errorConditionFormula>AND( NOT(ISBLANK( HealthCloudGA__Account__c )),  NOT(HealthCloudGA__Account__c = HealthCloudGA__CarePlan__r.AccountId) )</errorConditionFormula>
        <errorDisplayField>HealthCloudGA__Account__c</errorDisplayField>
        <errorMessage>The lookup to Account needs to match the lookup to Account on Case.</errorMessage>
    </validationRules>
</CustomObject>